--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,36 +18,49 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Install jq
+      run: sudo apt-get install -y jq
+
     - name: Authenticate and Download IAR File
       id: download_iar
       env:
         BASIC_AUTH: ${{ secrets.BASIC_AUTH }}
         IDCS_URL: ${{ secrets.IDCS_URL }}
       run: |
-        # Authenticate to get the Bearer token
+        echo "Authenticating with IDCS"
         AUTH_RESPONSE=$(curl -X POST \
           "$IDCS_URL/oauth2/v1/token" \
           -H 'Accept: application/json' \
           -H "Authorization: Basic $BASIC_AUTH" \
           -H 'Cache-Control: no-cache' \
           -H 'Content-Type: application/x-www-form-urlencoded' \
-          -d 'grant_type=client_credentials&scope=https://27AB99603F0E412C82017D2BD66711A2.integration.ocp.oraclecloud.com:443urn:opc:resource:consumer::all https://27AB99603F0E412C82017D2BD66711A2.integration.ocp.oraclecloud.com:443/ic/api/')
+          -d 'grant_type=client_credentials&scope=https://27AB99603F0E412C82017D2BD66711A2.integration.ocp.oraclecloud.com:443urn:opc:resource:consumer::all https://27AB99603F0E412C82017D2BD66711A2.integration.ocp.oraclecloud.com:443/ic/api/') || { echo "Authentication failed"; exit 1; }
 
+        echo "Auth response: $AUTH_RESPONSE"
         ACCESS_TOKEN=$(echo $AUTH_RESPONSE | jq -r '.access_token')
-        
-        echo $ACCESS_TOKEN
-        
-        # Download the IAR file using the Bearer token
+
+        if [ -z "$ACCESS_TOKEN" ]; then
+          echo "Failed to retrieve access token"
+          exit 1
+        fi
+
+        echo "Downloading IAR file"
         INTEGRATION_ID=${{ github.event.inputs.integration_id }}
         INTEGRATION_VERSION=${{ github.event.inputs.integration_version }}
-        curl -o downloaded.iar -H "Authorization: Bearer $ACCESS_TOKEN" \
-          "https://design.integration.us-ashburn-1.ocp.oraclecloud.com/ic/api/integration/v1/integrations/${INTEGRATION_ID}|${INTEGRATION_VERSION}?integrationInstance=gosaas-oic-gosaas-ia"
+        DOWNLOAD_URL="https://design.integration.us-ashburn-1.ocp.oraclecloud.com/ic/api/integration/v1/integrations/${INTEGRATION_ID}|${INTEGRATION_VERSION}?integrationInstance=gosaas-oic-gosaas-ia"
+        echo "Download URL: $DOWNLOAD_URL"
+
+        curl -o downloaded.iar -H "Authorization: Bearer $ACCESS_TOKEN" "$DOWNLOAD_URL" || { echo "Download failed"; exit 1; }
 
     - name: Commit and Push IAR File
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git config --global user.name 'wasif'
-        git config --global user.email 'wasifsuhail23@gmail.com'
-        mv downloaded.iar path/to/store/in/repo/
-        git add path/to/store/in/repo/downloaded.iar
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
+        TARGET_DIR="path/to/store/in/repo"
+        mkdir -p $TARGET_DIR
+        mv downloaded.iar $TARGET_DIR/
+        git add $TARGET_DIR/downloaded.iar
         git commit -m "Add downloaded IAR file"
         git push
