--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         echo "Content URL: $CONTENT_URL"
 
         echo "Showing content from the integration URL"
-        curl -H "Authorization: Bearer $ACCESS_TOKEN" "$CONTENT_URL" || { echo "Failed to retrieve content"; exit 1; }
+        curl -H "Authorization: Bearer $TOKEN" "$CONTENT_URL" || { echo "Failed to retrieve content"; exit 1; }
 
     - name: Download IAR File
       id: download_iar
@@ -62,7 +62,7 @@ jobs:
         DOWNLOAD_URL="https://design.integration.us-ashburn-1.ocp.oraclecloud.com/ic/api/integration/v1/integrations/${INTEGRATION_ID}|${INTEGRATION_VERSION}?integrationInstance=gosaas-oic-gosaas-ia"
         echo "Download URL: $DOWNLOAD_URL"
 
-        curl -o "${INTEGRATION_ID}.iar" -H "Authorization: Bearer $ACCESS_TOKEN" "$DOWNLOAD_URL" || { echo "Download failed"; exit 1; }
+        curl -o "${INTEGRATION_ID}.iar" -H "Authorization: Bearer $TOKEN" "$DOWNLOAD_URL" || { echo "Download failed"; exit 1; }
 
     - name: Commit and Push IAR File
       env:
