--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history for all branches and tags
 
     - name: Install jq
       run: sudo apt-get install -y jq
@@ -58,7 +60,7 @@ jobs:
         mv "${INTEGRATION_ID}.iar" $TARGET_DIR/
         echo "Moved IAR file to target directory:"
         ls -l $TARGET_DIR
-        git add $TARGET_DIR/"${INTEGRATION_ID}.iar"
+        git add -f $TARGET_DIR/"${INTEGRATION_ID}.iar"
         git status
         git commit -m "Add ${INTEGRATION_ID}.iar file"
         git push
