--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,18 @@ jobs:
         git commit -m "Update ${INTEGRATION_ID}.iar file"
         git push
 
+    - name: Delete Existing Tag if Present
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        INTEGRATION_ID=${{ github.event.inputs.integration_id }}
+        INTEGRATION_VERSION=${{ github.event.inputs.integration_version }}
+        TAG_NAME="${INTEGRATION_ID}-${INTEGRATION_VERSION}"
+        if git rev-parse $TAG_NAME >/dev/null 2>&1; then
+          git tag -d $TAG_NAME
+          git push origin :refs/tags/$TAG_NAME
+        fi
+
     - name: Create and Push Tag
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
