--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,5 +117,5 @@ jobs:
         # Prepare JSON payload
         JSON_PAYLOAD=$(jq -n --arg content "$IAR_CONTENT" '{file: $content}')
         # Send the request
-        curl -X POST -H "Authorization: Bearer $ACCESS_TOKEN" -H "Content-Type: application/json" -d "$JSON_PAYLOAD" "$UPLOAD_URL" || { echo "Deployment failed"; exit 1; }
+        curl -X POST -H "Authorization: Bearer $ACCESS_TOKEN" -H "Content-Type: application/json" -H "X-HTTP-Method-Override: PATCH" -d "$JSON_PAYLOAD" "$UPLOAD_URL" || { echo "Deployment failed"; exit 1; }
         echo "Deployment successful!"
