--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,7 +109,7 @@ jobs:
         INTEGRATION_VERSION=${{ github.event.inputs.integration_version }}
         TARGET_DIR="path/to/store/in/repo"
         IAR_FILE="${TARGET_DIR}/${INTEGRATION_ID}.iar"
-        UPLOAD_URL="https://integration.us.oraclecloud.com/ic/api/integration/v1/integrations/archive?integrationInstance=gosaas-oic-dev-tbt-gosaas-ia"
+        UPLOAD_URL="https://design.integration.us-ashburn-1.ocp.oraclecloud.com/ic/api/integration/v1/integrations/archive?integrationInstance=gosaas-oic-dev-tbt-gosaas-ia"
         
         echo "Deploying IAR file to new server..."
         echo "Using Integration ID: $INTEGRATION_ID"
