--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         RESPONSE=$(curl -X POST \
         'https://idcs-8ee74fa3a3744beda80d235994a9c0ce.identity.oraclecloud.com/oauth2/v1/token' \
         -H 'Content-Type: application/x-www-form-urlencoded' \
-        -H "Authorization: Basic $(echo -n '73c49a545b504db4aa91f27356366231:a8799ec7-3c29-477f-9085-aa01eb691dee' | base64)" \
+        -H "Authorization: Basic NzNjNDlhNTQ1YjUwNGRiNGFhOTFmMjczNTYzNjYyMzE6YTg3OTllYzctM2MyOS00NzdmLTkwODUtYWEwMWViNjkxZGVl" \
         -d 'grant_type=client_credentials&scope=https://27AB99603F0E412C82017D2BD66711A2.integration.ocp.oraclecloud.com:443urn:opc:resource:consumer::all')
         echo $RESPONSE
 
